2018-06-11 21:06 +0000  Asterisk Development Team <asteriskteam@digium.com>

	* asterisk certified/13.18-cert4 Released.

2018-04-30 17:38 +0000 [9fc59c223c]  Richard Mudgett <rmudgett@digium.com>

	* AST-2018-008: Fix enumeration of endpoints from ACL rejected addresses.

	  When endpoint specific ACL rules block a SIP request they respond with a
	  403 forbidden.  However, if an endpoint is not identified then a 401
	  unauthorized response is sent.  This vulnerability just discloses which
	  requests hit a defined endpoint.  The ACL rules cannot be bypassed to gain
	  access to the disclosed endpoints.

	  * Made endpoint specific ACL rules now respond with a 401 unauthorized
	  which is the same as if an endpoint were not identified.  The fix is
	  accomplished by replacing the found endpoint with the artificial endpoint
	  which always fails authentication.

	  ASTERISK-27818

	  Change-Id: Icb275a54ff8e2df6c671a6d9bda37b5d732b3b32

2018-04-18 15:59 +0000 [9b9e8bdb5a]  Kevin Harwell <kharwell@digium.com>

	* translate: generic plc not filled in after translation

	  If during translation a codec could not handle a given frame the translation
	  core would return NULL, thus not passing along the "missing" frame. Due to this
	  there was no frame to apply generic plc to, thus rendering it useless.

	  This patch makes it so the translation core produces an interpolated slin frame
	  in the cases where an attempt was made to translate to slin, but failed. This
	  interpolated frame is then passed along and can be used by the generic plc
	  algorithms to fill in the frame.

	  ASTERISK-27814 #close

	  Change-Id: I133d084da87adef913bf2ecc9c9240e3eaf4f40a

2018-03-16 10:19 +0000 [051c1ddf6c]  George Joseph <gjoseph@digium.com>

	* channel.c:  Allow generic plc then channel formats are equal

	  If the two formats on a channel are equal, we don't transcode and since
	  the generic plc needs slin to work, it doesn't get invoked.
