@@ -8,7 +8,7 @@
 <li><a href="http://downloads.asterisk.org/pub/security/AST-2018-008.html">AST-2018-008</a></li>
 </ul><p>The data in this summary reflects changes that have been made since the previous release, asterisk-certified/13.18-cert3.</p><hr><a name="contributors"><h2 align="center">Contributors</h2></a><center><a href="#top">[Back to Top]</a></center><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release. For coders, the number is how many of their patches (of any size) were committed into this release. For testers, the number is the number of times their name was listed as assisting with testing a patch. Finally, for reporters, the number is the number of issues that they reported that were affected by commits that went into this release.</p><table width="100%" border="0">
 <tr><th width="33%">Coders</th><th width="33%">Testers</th><th width="33%">Reporters</th></tr>
-<tr valign="top"><td width="33%">2 Kevin Harwell <kharwell@digium.com><br/>2 Richard Mudgett <rmudgett@digium.com><br/>2 George Joseph <gjoseph@digium.com><br/>1 Joshua Colp <jcolp@digium.com><br/></td><td width="33%"><td width="33%">2 Kevin Harwell <kharwell@digium.com><br/>1 Bryan Walters <secretop@gmail.com><br/>1 George Joseph <gjoseph@digium.com><br/>1 John <john@antme.com><br/>1 Alejandro Padilla <alejandro.padilla83@gmail.com><br/></td></tr>
+<tr valign="top"><td width="33%">3 Kevin Harwell <kharwell@digium.com><br/>2 Richard Mudgett <rmudgett@digium.com><br/>2 George Joseph <gjoseph@digium.com><br/>1 Joshua Colp <jcolp@digium.com><br/></td><td width="33%"><td width="33%">2 Kevin Harwell <kharwell@digium.com><br/>1 Bryan Walters <secretop@gmail.com><br/>1 George Joseph <gjoseph@digium.com><br/>1 John <john@antme.com><br/>1 Alejandro Padilla <alejandro.padilla83@gmail.com><br/></td></tr>
 </table><hr><a name="closed_issues"><h2 align="center">Closed Issues</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p><h3>Security</h3><h4>Category: Resources/res_pjsip</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27818">ASTERISK-27818</a>: Username bruteforce is possible when using ACL with PJSIP<br/>Reported by: John<ul>
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=9fc59c223cc56c718b99b6cef2cb03dfcaf0a234">[9fc59c223c]</a> Richard Mudgett -- AST-2018-008: Fix enumeration of endpoints from ACL rejected addresses.</li>
 </ul><br><h3>Bug</h3><h4>Category: Applications/app_confbridge</h4><a href="https://issues.asterisk.org/jira/browse/ASTERISK-27755">ASTERISK-27755</a>: ConfBridge: raise ConfbridgeTalking when put on hold and clear talking status<br/>Reported by: Kevin Harwell<ul>
@@ -29,17 +29,23 @@
 <li><a href="https://code.asterisk.org/code/changelog/asterisk?cs=92f509fce6e18a5574eda9240588c8c36ba694da">[92f509fce6]</a> Richard Mudgett -- res_pjsip_refer.c: Fix attended transfer race condition crash.</li>
 </ul><br><hr><a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a list of all changes that went into this release that did not reference a JIRA issue.</p><table width="100%" border="1">
 <tr><th>Revision</th><th>Author</th><th>Summary</th></tr>
+<tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=d6f82bee60f12b2ea6973773bd9f0f3c78e016b8">d6f82bee60</a></td><td>Kevin Harwell</td><td>Update for certified/13.18-cert4</td></tr>
 <tr><td><a href="https://code.asterisk.org/code/changelog/asterisk?cs=064a18ce361747ca26aa536c26f74a17a24e7163">064a18ce36</a></td><td>George Joseph</td><td>ast_coredumper:  Minor fixes</td></tr>
-</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>CHANGES                            |   11 ++
-bridges/bridge_softmix.c           |   48 ++++++++--
-channels/chan_sip.c                |    3
-configs/samples/codecs.conf.sample |    9 +
-contrib/scripts/ast_coredumper     |  169 ++++++++++++++++++++++++++++---------
-formats/format_sln.c               |    6 +
-include/asterisk/options.h         |    3
-main/asterisk.c                    |    1
-main/channel.c                     |   19 +++-
-main/translate.c                   |   33 +++++++
-res/res_pjsip/pjsip_distributor.c  |   38 ++++++--
-res/res_pjsip_refer.c              |    5 -
-12 files changed, 283 insertions(+), 62 deletions(-)</pre><br></html>
+</table><hr><a name="diffstat"><h2 align="center">Diffstat Results</h2></a><center><a href="#top">[Back to Top]</a></center><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p><pre>asterisk-certified-13.18-cert3-summary.html   |  747 ----------------------
+asterisk-certified-13.18-cert3-summary.txt    |  866 --------------------------
+b/.version                                    |    2
+b/CHANGES                                     |   11
+b/ChangeLog                                   |  122 +++
+b/asterisk-certified-13.18-cert4-summary.html |   45 +
+b/asterisk-certified-13.18-cert4-summary.txt  |  178 +++++
+b/bridges/bridge_softmix.c                    |   48 +
+b/channels/chan_sip.c                         |    3
+b/configs/samples/codecs.conf.sample          |    9
+b/contrib/scripts/ast_coredumper              |  169 +++--
+b/formats/format_sln.c                        |    6
+b/include/asterisk/options.h                  |    3
+b/main/asterisk.c                             |    1
+b/main/channel.c                              |   19
+b/main/translate.c                            |   33
+b/res/res_pjsip/pjsip_distributor.c           |   17
+17 files changed, 612 insertions(+), 1667 deletions(-)</pre><br></html>
