@@ -52,7 +52,7 @@
    this release.
 
    Coders                   Testers                  Reporters                
-   2 Kevin Harwell                                   2 Kevin Harwell          
+   3 Kevin Harwell                                   2 Kevin Harwell          
    2 Richard Mudgett                                 1 Bryan Walters          
    2 George Joseph                                   1 George Joseph          
    1 Joshua Colp                                     1 John                   
@@ -149,9 +149,11 @@
    reference a JIRA issue.
 
    +------------------------------------------------------------------------+
-   | Revision        | Author             | Summary                         |
-   |-----------------+--------------------+---------------------------------|
-   | 064a18ce36      | George Joseph      | ast_coredumper: Minor fixes     |
+   | Revision      | Author           | Summary                             |
+   |---------------+------------------+-------------------------------------|
+   | d6f82bee60    | Kevin Harwell    | Update for certified/13.18-cert4    |
+   |---------------+------------------+-------------------------------------|
+   | 064a18ce36    | George Joseph    | ast_coredumper: Minor fixes         |
    +------------------------------------------------------------------------+
 
      ----------------------------------------------------------------------
@@ -163,16 +165,21 @@
    This is a summary of the changes to the source code that went into this
    release that was generated using the diffstat utility.
 
- CHANGES                            |   11 ++
- bridges/bridge_softmix.c           |   48 ++++++++--
- channels/chan_sip.c                |    3
- configs/samples/codecs.conf.sample |    9 +
- contrib/scripts/ast_coredumper     |  169 ++++++++++++++++++++++++++++---------
- formats/format_sln.c               |    6 +
- include/asterisk/options.h         |    3
- main/asterisk.c                    |    1
- main/channel.c                     |   19 +++-
- main/translate.c                   |   33 +++++++
- res/res_pjsip/pjsip_distributor.c  |   38 ++++++--
- res/res_pjsip_refer.c              |    5 -
- 12 files changed, 283 insertions(+), 62 deletions(-)
+ asterisk-certified-13.18-cert3-summary.html   |  747 ----------------------
+ asterisk-certified-13.18-cert3-summary.txt    |  866 --------------------------
+ b/.version                                    |    2
+ b/CHANGES                                     |   11
+ b/ChangeLog                                   |  122 +++
+ b/asterisk-certified-13.18-cert4-summary.html |   45 +
+ b/asterisk-certified-13.18-cert4-summary.txt  |  178 +++++
+ b/bridges/bridge_softmix.c                    |   48 +
+ b/channels/chan_sip.c                         |    3
+ b/configs/samples/codecs.conf.sample          |    9
+ b/contrib/scripts/ast_coredumper              |  169 +++--
+ b/formats/format_sln.c                        |    6
+ b/include/asterisk/options.h                  |    3
+ b/main/asterisk.c                             |    1
+ b/main/channel.c                              |   19
+ b/main/translate.c                            |   33
+ b/res/res_pjsip/pjsip_distributor.c           |   17
+ 17 files changed, 612 insertions(+), 1667 deletions(-)
